# simple-restaurant-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  REQUIREMENTS.md  docker-compose.env  docker-compose.yml  rustfmt.toml
.sqlx/: query-254cae3986f9d84e3093550ce07da70b01dc5c9be2e090cafdaa11c8aebcf549.json  query-2c86b2292e75f2a76a4e12b6f42c82c379a89342f44c4a72e5755a985017bf74.json  query-57d0bc8a69e07f3cd9bf16d293ca8d78e461925c80b90b45be54b8930f545c6e.json  query-632ca8961e818ae6b30b630e577866d263c9438f81038f9ccf78fa9618a7c732.json  query-8c4dd9d5241a35d8e2d8875507b0ca095b4616ebaae9a6ae11f5e160fc22054d.json  query-a69279f420813a30b6a0a9cd11c9d70ddb887aa9e9d10b5c43afffcfcc59e25c.json  query-b8ba63964d31fe69ab808f2d0f366a760d635f94eec384f80d29cb5af996628a.json  query-c65a3e4283a1da48860ba712a7d05c8982c36350c417d8e4a9f7dfe0489b81bd.json
client-test/: Cargo.toml
client-test/src/: main.rs
db/migrations/: 20240710000924_init.down.sql  20240710000924_init.up.sql  20240710163744_init_data.down.sql  20240710163744_init_data.up.sql
migrations/: 20240710000924_init.up.sql  20240710163744_init_table.down.sql
src/: app.rs  configs.rs  logging.rs  main.rs
src/services/: orders.rs
src/services/fixtures/: orders.sql
