[package]
name = "simple-restaurant-api"
version = "0.1.0"
authors = ["BigJerBD"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-rt = "2.10.0"
actix-web = "4.8.0"

# Databases
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "uuid", "migrate", "chrono"] }

# Config
envy = "0.4.2"
dotenv = "0.15.0"

# Serialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"


# Logging
env_logger = "0.11.3"
uuid = { version = "1.10.0", features = ["v4"] }

# Swagger
utoipa =  { version="5.0.0-alpha.0", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["actix-web"] }


# Misc
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"